fix(date-picker): horizontal scroll in dropdown mode

--- a/src/components/date-picker/themes/date-picker.base.scss
+++ b/src/components/date-picker/themes/date-picker.base.scss
@@ -2,12 +2,15 @@
 @use 'styles/utilities' as *;
 
 :host {
+    --min-width: #{sizable(rem(290px), rem(314px), rem(360px))};
+
     igc-focus-trap {
         display: flex;
         flex: 1 0 0;
         flex-direction: column;
-        min-width: #{sizable(rem(290px), rem(314px), rem(360px))};
-        overflow: hidden;
+        min-width: var(--min-width);
+        max-width: calc(var(--min-width)*2);
+        overflow: auto hidden;
 
         igc-calendar {
             border: none;
